fixing the todo text from overflowing

--- a/style.css
+++ b/style.css
@@ -27,6 +27,13 @@ input[type='text']::placeholder {
   color: #c5bdbd;
 }
 
+span {
+  overflow: hidden;
+}
+i {
+  margin-left: 0.8rem;
+}
+
 .todos li {
   box-shadow: 1px 3px 3px 1px rgba(0, 0, 0, 0.4);
   background: #6f868179;
